--- a/index.html
+++ b/index.html
@@ -192,28 +192,28 @@
 
                 <ul class="person-icons-list">
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -237,28 +237,28 @@
 
                 <ul class="person-icons-list">
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href="">
+                    <a class="person-social-icons-link" href="">
                       <svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -282,28 +282,28 @@
 
                 <ul class="person-icons-list">
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -327,28 +327,28 @@
 
                 <ul class="person-icons-list">
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="person-icons-item">
-                    <a class="social-icons-link" href=""
+                    <a class="person-social-icons-link" href=""
                       ><svg class="social-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -427,28 +427,28 @@
           <p class="footer-text-icon">Social media</p>
           <ul class="footer-icons-list">
             <li class="footer-icons-item">
-              <a class="social-icons-link" href="">
+              <a class="footer-social-icons-link" href="">
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-item">
-              <a class="social-icons-link" href="">
+              <a class="footer-social-icons-link" href="">
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-item">
-              <a class="social-icons-link" href="">
+              <a class="footer-social-icons-link" href="">
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-item">
-              <a class="social-icons-link" href="">
+              <a class="footer-social-icons-link" href="">
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
@@ -472,43 +472,51 @@
         <form name="reviews" autocomplete="on">
           <ul class="reviews-list">
             <li class="reviews-item"></li>
-              <label for="user_name">Name</label>
               <div>
-                <input type="text" class="modal-input" name="user_name" id="user_name" requiredb autofocus/>
-                <svg class="" width="" height="">
-                  <use href=""></use>
-                </svg>
+                <label for="user_name">Name</label>
+                <div>
+                  <input type="text" class="modal-input" name="user_name" id="user_name" requiredb autofocus/>
+                  <svg class="reviews-icon" width="18" height="24">
+                    <use href=""></use>
+                  </svg>
+                </div>
               </div>
             </li>
             <li class="reviews-item">
-              <label for="user_phone">Phone</label>
               <div>
-                <input type="tel" class="modal-input" name="user_phone" id="user_phone" required/>
-                <svg class="" width="" height="">
-                  <use href=""></use>
-                </svg>
+                <label for="user_phone">Phone</label>
+                <div>
+                  <input type="tel" class="modal-input" name="user_phone" id="user_phone" required/>
+                  <svg class="reviews-icon" width="18" height="24">
+                    <use href=""></use>
+                  </svg>
+                </div>
               </div>
             </li>
             <li class="reviews-item">
-              <label for="user_email">Email</label>
               <div>
-                <input type="email" class="modal-input" name="user_email" id="user_email" required/>
-                <svg class="" width="" height="">
-                  <use href=""></use>
-                </svg>
+                <label for="user_email">Email</label>
+                <div>
+                  <input type="email" class="modal-input" name="user_email" id="user_email" required/>
+                  <svg class="reviews-icon" width="18" height="24">
+                    <use href=""></use>
+                  </svg>
+                </div>
               </div>
             </li>
             <li class="reviews-item">
-              <label for="user_comment">Comment</label>
               <div>
-                <input type="text" class="modal-input" name="user_comment" id="user_comment" placeholder="Text input"/>
-                <svg class="" width="" height="">
-                  <use href=""></use>
-                </svg>
+                <label for="user_comment">Comment</label>
+                <div>
+                  <textarea type="text" class="modal-input" name="user_comment" id="user_comment" rows="10" placeholder="Text input"></textarea>
+                  <svg class="reviews-icon" width="18" height="24">
+                    <use href=""></use>
+                  </svg>
+                </div>
               </div>
             </li>
           </ul>
-          <input type="checkbox" name="accept" required/><label for="">I accept the terms and conditions of the Privacy Policy</label>
+          <label for=""></label><input type="checkbox" name="accept" required/><span>I accept the terms and conditions of the Privacy Policy</span>
           <button class="btn-review" type="submit">Send</button>
         </form>
       </div>
