--- a/portfolio.html
+++ b/portfolio.html
@@ -314,28 +314,28 @@
           <p class="footer-text-icon">Social media</p>
           <ul class="footer-icons-list">
             <li class="footer-icons-item">
-              <a class="social-icons-link" href="">
+              <a class="footer-social-icons-link" href="">
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-item">
-              <a class="social-icons-link" href="">
+              <a class="footer-social-icons-link" href="">
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-item">
-              <a class="social-icons-link" href="">
+              <a class="footer-social-icons-link" href="">
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-item">
-              <a class="social-icons-link" href="">
+              <a class="footer-social-icons-link" href="">
                 <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
