--- a/index.html
+++ b/index.html
@@ -456,6 +456,16 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <div class="footer-subscribe-text-input">
+            <label class="footer-subscribe-label" for="user_email_subscribe">Subscribe</label>
+            <input class="footer-subscribe-string" type="email" name="user_email_subscribe" placeholder="E-mail"/>
+          </div>
+          <button class="footer-subscribe-btn" type="submit">Subscribe<svg class="footer-subscribe-btn-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-paper-plane"></use>
+          </svg>
+          </button>
+        </div>
       </div>
     </footer>
     <!-- is-hidden -->
@@ -466,18 +476,16 @@
             <use href="./images/icons.svg#icon-close-btn"></use>
           </svg>
         </button>
-        <strong class="text-review"
-          >Leave your contacts and we will call you back</strong
-        >
+        <div class="modal-review-block"><p class="text-review">Leave your contacts and we will call you back</p>
         <form name="reviews" autocomplete="on">
           <ul class="reviews-list">
             <li class="reviews-item"></li>
               <div>
                 <label for="user_name">Name</label>
                 <div>
-                  <input type="text" class="modal-input" name="user_name" id="user_name" requiredb autofocus/>
+                  <input type="text" class="modal-input" name="user_name" id="user_name" required autofocus/>
                   <svg class="reviews-icon" width="18" height="24">
-                    <use href=""></use>
+                    <use href="./images/icons.svg#icon-person"></use>
                   </svg>
                 </div>
               </div>
@@ -488,7 +496,7 @@
                 <div>
                   <input type="tel" class="modal-input" name="user_phone" id="user_phone" required/>
                   <svg class="reviews-icon" width="18" height="24">
-                    <use href=""></use>
+                    <use href="./images/icons.svg#icon-phone"></use>
                   </svg>
                 </div>
               </div>
@@ -499,7 +507,7 @@
                 <div>
                   <input type="email" class="modal-input" name="user_email" id="user_email" required/>
                   <svg class="reviews-icon" width="18" height="24">
-                    <use href=""></use>
+                    <use href="./images/icons.svg#icon-email"></use>
                   </svg>
                 </div>
               </div>
@@ -510,15 +518,18 @@
                 <div>
                   <textarea type="text" class="modal-input" name="user_comment" id="user_comment" rows="10" placeholder="Text input"></textarea>
                   <svg class="reviews-icon" width="18" height="24">
-                    <use href=""></use>
+                    <use href="./images/icons.svg#"></use>
                   </svg>
                 </div>
               </div>
             </li>
           </ul>
-          <label for=""></label><input type="checkbox" name="accept" required/><span>I accept the terms and conditions of the Privacy Policy</span>
-          <button class="btn-review" type="submit">Send</button>
+        
+          <!-- <label for=""></label> -->
+          <div class="checkbox-agreement"><input type="checkbox" name="accept" required/><span class="checkbox-agreement-text">I accept the terms and conditions of the Privacy Policy</span>
+          <button class="btn-review" type="submit">Send</button></div>
         </form>
+      </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
