--- a/portfolio.html
+++ b/portfolio.html
@@ -343,6 +343,28 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <div class="footer-subscribe-text-input">
+            <label class="footer-subscribe-label" for="user_email_subscribe"
+              >Subscribe</label
+            >
+            <input
+              class="footer-subscribe-string"
+              type="email"
+              name="user_email_subscribe"
+              placeholder="E-mail"
+            />
+          </div>
+          <button class="footer-subscribe-btn" type="submit">
+            Subscribe<svg
+              class="footer-subscribe-btn-icon"
+              width="24"
+              height="24"
+            >
+              <use href="./images/icons.svg#icon-paper-plane"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </footer>
   </body>
