--- a/index.html
+++ b/index.html
@@ -458,12 +458,24 @@
         </div>
         <div class="footer-subscribe">
           <div class="footer-subscribe-text-input">
-            <label class="footer-subscribe-label" for="user_email_subscribe">Subscribe</label>
-            <input class="footer-subscribe-string" type="email" name="user_email_subscribe" placeholder="E-mail"/>
+            <label class="footer-subscribe-label" for="user_email_subscribe"
+              >Subscribe</label
+            >
+            <input
+              class="footer-subscribe-string"
+              type="email"
+              name="user_email_subscribe"
+              placeholder="E-mail"
+            />
           </div>
-          <button class="footer-subscribe-btn" type="submit">Subscribe<svg class="footer-subscribe-btn-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-paper-plane"></use>
-          </svg>
+          <button class="footer-subscribe-btn" type="submit">
+            Subscribe<svg
+              class="footer-subscribe-btn-icon"
+              width="24"
+              height="24"
+            >
+              <use href="./images/icons.svg#icon-paper-plane"></use>
+            </svg>
           </button>
         </div>
       </div>
@@ -476,60 +488,102 @@
             <use href="./images/icons.svg#icon-close-btn"></use>
           </svg>
         </button>
-        <div class="modal-review-block"><p class="text-review">Leave your contacts and we will call you back</p>
-        <form name="reviews" autocomplete="on">
-          <ul class="reviews-list">
-            <li class="reviews-item"></li>
-              <div>
-                <label for="user_name">Name</label>
-                <div>
-                  <input type="text" class="modal-input" name="user_name" id="user_name" required autofocus/>
-                  <svg class="reviews-icon" width="18" height="24">
-                    <use href="./images/icons.svg#icon-person"></use>
-                  </svg>
-                </div>
+        <div class="modal-review-block">
+          <p class="modal-cta">Leave your contacts and we will call you back</p>
+          <form class="modal-review-form" name="review" autocomplete="on">
+            <div class="review-form-wrapper">
+              <label class="review-form-label" for="user_name">Name</label>
+              <div class="review-form-field">
+                <input
+                  class="review-form-input"
+                  type="text"
+                  name="user_name"
+                  id="user_name"
+                  placeholder="&nbsp;"
+                  minlength="3"
+                  required
+                />
+                <svg class="review-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
               </div>
-            </li>
-            <li class="reviews-item">
-              <div>
-                <label for="user_phone">Phone</label>
-                <div>
-                  <input type="tel" class="modal-input" name="user_phone" id="user_phone" required/>
-                  <svg class="reviews-icon" width="18" height="24">
-                    <use href="./images/icons.svg#icon-phone"></use>
-                  </svg>
-                </div>
+            </div>
+            <div class="review-form-wrapper">
+              <label class="review-form-label" for="user_phone">Phone</label>
+              <div class="review-form-field">
+                <input
+                  class="review-form-input"
+                  type="tel"
+                  name="user_phone"
+                  id="user_phone"
+                  minlength="10"
+                  maxlength="12"
+                  pattern="[0-9]+"
+                />
+                <svg class="review-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
               </div>
-            </li>
-            <li class="reviews-item">
-              <div>
-                <label for="user_email">Email</label>
-                <div>
-                  <input type="email" class="modal-input" name="user_email" id="user_email" required/>
-                  <svg class="reviews-icon" width="18" height="24">
-                    <use href="./images/icons.svg#icon-email"></use>
-                  </svg>
-                </div>
+            </div>
+            <div class="review-form-wrapper">
+              <label class="review-form-label" for="user_email">Email</label>
+              <div class="review-form-field">
+                <input
+                  class="review-form-input"
+                  type="email"
+                  name="user_email"
+                  id="user_email"
+                  required
+                  pattern="[a-zA-Z\S]+@[a-zA-Z\S]+\.[a-z]{2,3}$"
+                  title="Email must contain domen"
+                />
+                <svg class="review-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
               </div>
-            </li>
-            <li class="reviews-item">
-              <div>
-                <label for="user_comment">Comment</label>
-                <div>
-                  <textarea type="text" class="modal-input" name="user_comment" id="user_comment" rows="10" placeholder="Text input"></textarea>
-                  <svg class="reviews-icon" width="18" height="24">
-                    <use href="./images/icons.svg#"></use>
+            </div>
+
+            <div class="review-form-wrapper">
+              <label class="review-form-label" for="user_msg">Comment</label>
+              <textarea
+                class="review-form-message"
+                name="user_msg"
+                id="user_msg"
+                rows="4"
+                placeholder="Text input"
+                minlength="10"
+              ></textarea>
+            </div>
+
+            <div class="review-form-agreement">
+              <input
+                class="visually-hidden"
+                type="checkbox"
+                name="user_agreement"
+                id="user_agreement"
+                value="false"
+                required
+              />
+              <label class="review-form-agreement-desc" for="user_agreement">
+                <span class="review-form-checkbox">
+                  <svg class="review-form-checkbox-icon" width="10" height="8">
+                    <use href="./images/icons.svg#icon-tick"></use>
                   </svg>
-                </div>
-              </div>
-            </li>
-          </ul>
-        
-          <!-- <label for=""></label> -->
-          <div class="checkbox-agreement"><input type="checkbox" name="accept" required/><span class="checkbox-agreement-text">I accept the terms and conditions of the Privacy Policy</span>
-          <button class="btn-review" type="submit">Send</button></div>
-        </form>
-      </div>
+                </span>
+                I accept the terms and conditions of the
+                <a
+                  class="review-form-agreement-link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  Privacy Policy
+                </a>
+              </label>
+            </div>
+            <button class="main-button-home" type="submit">Send</button>
+          </form>
+        </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
