--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer-subscribe">
+        <form class="footer-subscribe" name="subscribe" autocomplete="on">
           <div class="footer-subscribe-text-input">
             <label class="footer-subscribe-label" for="user_email_subscribe"
               >Subscribe</label
@@ -477,11 +477,10 @@
               <use href="./images/icons.svg#icon-paper-plane"></use>
             </svg>
           </button>
-        </div>
+        </form>
       </div>
     </footer>
-    <!-- is-hidden -->
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="modal-btn-icon" width="8" height="8">
